// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test with <GifExpertApp /> should match the <GifExpertApp /> with the snapshot correctly 1`] = `
<Fragment>
  <h2>
    GifExpert
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Test with <GifExpertApp /> should to show a category list 1`] = `
<Fragment>
  <h2>
    GifExpert
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Boku No Hero"
      key="Boku No Hero"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;
